--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>christmas-tree</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="src/main.tsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <title>Merry Christmas</title>
+    <style>
+        body { margin: 0; background: #020205; color: white; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; overflow: hidden; font-family: 'Arial', sans-serif; }
+        .tree { position: relative; width: 200px; height: 300px; transform-style: preserve-3d; animation: rotate 10s infinite linear; }
+        @keyframes rotate { from { transform: rotateY(0deg); } to { transform: rotateY(360deg); } }
+        .star { position: absolute; top: -50px; left: 50%; transform: translateX(-50%); color: gold; font-size: 50px; filter: drop-shadow(0 0 10px yellow); }
+        .leaf { position: absolute; width: 0; height: 0; border-left: 100px solid transparent; border-right: 100px solid transparent; border-bottom: 100px solid green; left: 0; }
+        .leaf:nth-child(1) { top: 0; transform: scale(0.6); }
+        .leaf:nth-child(2) { top: 50px; transform: scale(0.8); }
+        .leaf:nth-child(3) { top: 100px; transform: scale(1); }
+        .trunk { position: absolute; width: 40px; height: 60px; background: #5d4037; bottom: -60px; left: 80px; }
+        .message { margin-top: 100px; text-align: center; font-size: 24px; text-shadow: 0 0 10px #ff0000; animation: blink 1s infinite; }
+        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
+    </style>
+</head>
+<body>
+    <div class="tree">
+        <div class="star">★</div>
+        <div class="leaf"></div>
+        <div class="leaf"></div>
+        <div class="leaf"></div>
+        <div class="trunk"></div>
+    </div>
+    <div class="message">🎄 Giáng Sinh Vui Vẻ! 🎄<br>Chúc bạn một mùa đông ấm áp</div>
+    
+    <script>
+        function createSnowflake() {
+            const snowflake = document.createElement('div');
+            snowflake.innerHTML = '❄';
+            snowflake.style.position = 'fixed';
+            snowflake.style.left = Math.random() * 100 + 'vw';
+            snowflake.style.top = '-20px';
+            snowflake.style.color = 'white';
+            snowflake.style.fontSize = Math.random() * 10 + 10 + 'px';
+            snowflake.style.opacity = Math.random();
+            snowflake.style.transition = `top ${Math.random() * 3 + 2}s linear`;
+            document.body.appendChild(snowflake);
+            setTimeout(() => { snowflake.style.top = '100vh'; }, 10);
+            setTimeout(() => { snowflake.remove(); }, 5000);
+        }
+        setInterval(createSnowflake, 100);
+    </script>
+</body>
 </html>
