--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </style>
 </head>
 <body>
+    <audio autoplay loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+</audio>
     <div class="tree">
         <div class="star">★</div>
         <div class="leaf"></div>
@@ -25,7 +28,7 @@
         <div class="leaf"></div>
         <div class="trunk"></div>
     </div>
-    <div class="message">🎄 Giáng Sinh Vui Vẻ! 🎄<br>Chúc bạn một mùa đông ấm áp</div>
+    <div class="message">🎄 Giáng Sinh Vui Vẻ! 🎄<br>Cảm ơn anh em</div>
     
     <script>
         function createSnowflake() {
